test/arrays/deitz/part7/test_illegal_alias_operator.good
test_illegal_alias_operator.chpl:5: syntax error: near '=>'
