test/arrays/deitz/part7/test_illegal_alias_operator.chpl
var A: [1..3] int;

var B: [2..4] int;

B => A;

writeln(A);
writeln(B);
